--- a/_car_app/pom.xml
+++ b/_car_app/pom.xml
@@ -9,8 +9,8 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.3</version> <!-- You can update to the latest if needed -->
-    <relativePath/> 
+    <version>3.1.3</version>
+    <relativePath/>
   </parent>
 
   <groupId>com.cars</groupId>
@@ -25,19 +25,19 @@
 
   <dependencies>
 
-    <!-- Spring Boot Web (REST APIs) -->
+    <!-- Spring Boot Web -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
-    <!-- Spring Boot JPA (Database ORM) -->
+    <!-- Spring Boot Data JPA -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
-    <!-- MySQL Connector (Database Driver) -->
+    <!-- MySQL JDBC Driver -->
     <dependency>
       <groupId>com.mysql</groupId>
       <artifactId>mysql-connector-j</artifactId>
@@ -45,7 +45,7 @@
       <scope>runtime</scope>
     </dependency>
 
-    <!-- Lombok (auto-generate getters/setters/constructors) -->
+    <!-- Lombok -->
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
@@ -53,7 +53,7 @@
       <scope>provided</scope>
     </dependency>
 
-    <!-- Spring Boot Test (for unit/integration tests) -->
+    <!-- Spring Boot Test -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
@@ -65,7 +65,7 @@
   <build>
     <plugins>
 
-      <!-- Maven Compiler Plugin (handles annotation processing like Lombok) -->
+      <!-- Maven Compiler Plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -83,7 +83,7 @@
         </configuration>
       </plugin>
 
-      <!-- Spring Boot Maven Plugin (builds and runs the app) -->
+      <!-- Spring Boot Plugin -->
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
